--- a/style/style.scss
+++ b/style/style.scss
@@ -28,13 +28,18 @@ h1{
 
 form{
     background: rgb(243, 249, 204);
+    display: flex;
+    flex-direction:row;
+    align-items: center;
     input, button{
+        appearance: none;
+        border: none;
+        outline: none;
     padding: 0.5rem;
+    justify-content: space-around;
     font-size: 1.5rem;
-    border: none;
     background: rgb(243, 249, 204);
     transition: all 0.3s ease;
-
 }
 
     button{
@@ -47,4 +52,86 @@ form{
         color: rgb(243, 249, 204);
         background: #203A43;
     }
+    select{
+        appearance: none;
+        border: none;
+        outline: none;
+        background: rgb(243, 249, 204);
+        text-align: center;
+        font-size: 1.5rem;
+        cursor: pointer;
+        overflow: hidden;
+    }
+
+
+}
+.task-list{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.todo{
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border:red 1px solid;
+
+    background: rgb(243, 249, 204);
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    border: none;
+    background: rgb(243, 249, 204);
+    transition: all 0.7s ease ;
+
+    li{
+        list-style-type: none;
+    }
+}
+.done-button{
+    background:none ;
+    color:#3cf166;
+    font-size: 1.5rem;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    height: 100%;
+    color:#203A43;
+    transition: all 0.3s ease ;
+    &:hover{
+        background: #3cf166;
+        color:#1f3941;
+    }
+}
+.edit-button{
+    background:none ;
+    color:#fb4b4b;
+    font-size: 1.5rem;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    height: 100%;
+    color:#203A43;
+    transition: all 0.3s ease ;
+    &:hover{
+        background: #fb4b4b;
+        color:#1f3941;
+    }
+}
+.fa-solid{
+    pointer-events: none;
+}
+.completed{
+    text-decoration: line-through;
+    opacity: 50%;
+}
+.deleteAnimation{
+    opacity: 0;
+    transform: translateY(8rem) rotateZ(20deg);
+
+}
+.hide{
+    opacity: 30%;
 }
